# Copyright (c) 2017–2020 Antti Kivi
# Licensed under the Effective Elegy Licence

add_subdirectory(systems)

list(APPEND ANTHEM_TEST_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/command_line_interface_test.cpp)
list(APPEND ANTHEM_TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/logger_test.cpp)
list(APPEND ANTHEM_TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)

list(APPEND ANTHEM_BENCHMARK_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/logger_benchmark.cpp)

set(ANTHEM_TEST_SOURCES ${ANTHEM_TEST_SOURCES} PARENT_SCOPE)
set(ANTHEM_BENCHMARK_SOURCES ${ANTHEM_TEST_SOURCES} PARENT_SCOPE)
